<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_Name"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_name"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/edt_Name"
        android:layout_width="200dp"
        android:layout_height="41dp"
        app:layout_constraintStart_toEndOf="@id/txt_Name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_GT"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Name"
        android:text="@string/label_GT"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/sp_GT"
        android:layout_width="150dp"
        android:layout_height="41dp"
        app:layout_constraintStart_toEndOf="@id/txt_GT"
        app:layout_constraintTop_toBottomOf="@id/edt_Name"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txt_NS"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_GT"
        android:text="@string/label_NS"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_NS"
        android:layout_width="200dp"
        android:layout_height="41dp"
        app:layout_constraintStart_toEndOf="@id/txt_NS"
        app:layout_constraintTop_toBottomOf="@id/sp_GT"
        android:layout_marginTop="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_Email"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_NS"
        android:text="@string/label_Email"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/edt_Email"
        android:layout_width="200dp"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@id/btn_NS"
        app:layout_constraintStart_toEndOf="@id/txt_Email"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/txt_Ava"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Email"
        android:text="@string/label_Ava"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/Img_V"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/edt_Email"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_Ava"
        android:background="@drawable/ic_launcher_background"
        />
    <Button
        android:id="@+id/btn_Img"
        android:layout_width="55dp"
        android:layout_height="41dp"
        android:text="..."
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/Img_V"
        app:layout_constraintTop_toBottomOf="@id/edt_Email"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="@string/button_submit"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/Img_V"
        app:layout_constraintStart_toEndOf="@id/Img_V"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        />


</android.support.constraint.ConstraintLayout>