<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity">

    <TextView
        android:id="@+id/txt_hoten"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/label_name"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/txt_hoten1"
        android:layout_width="200dp"
        android:layout_height="41dp"
        app:layout_constraintStart_toEndOf="@id/txt_hoten"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"  />
    <TextView
        android:id="@+id/txt_gioitinh"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_hoten"
        android:text="@string/label_GT"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/txt_gt"
        android:layout_width="150dp"
        android:layout_height="41dp"
        app:layout_constraintStart_toEndOf="@id/txt_gioitinh"
        app:layout_constraintTop_toBottomOf="@id/txt_hoten"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/txt_ngaysinh"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_gioitinh"
        android:text="@string/label_NS"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/txt_ns"
        android:layout_width="200dp"
        android:layout_height="41dp"
        app:layout_constraintStart_toEndOf="@id/txt_ngaysinh"
        app:layout_constraintTop_toBottomOf="@id/txt_gt"
        android:layout_marginTop="16dp"
        android:gravity="center" />
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_ngaysinh"
        android:text="@string/label_Email"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/txt_EM"
        android:layout_width="200dp"
        android:layout_height="41dp"
        app:layout_constraintTop_toBottomOf="@id/txt_ngaysinh"
        app:layout_constraintStart_toEndOf="@id/txt_email"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/txt_ava"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        android:text="@string/label_Ava"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="#000"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/img_V"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/txt_ava"
        android:background="@drawable/ic_launcher_background"
        />


</android.support.constraint.ConstraintLayout>